nes-systests/systest/tests/testdata/errors/result/LessResultsThanExpected.dummy
Source stream UINT64 id INLINE
1
2
3

SINK CORRECT_SINK UINT64 stream$id
SELECT id FROM stream INTO CORRECT_SINK
----
1
2
3

SINK INCORRECT_SINK UINT64 stream$id
SELECT id FROM stream WHERE id < UINT64(3) INTO INCORRECT_SINK
----
1
2
3
